[package]
name = "my-git"
version = "0.1.0"
authors = ["3to5thpower <nisi3genki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["serde", "chrono/serde"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.2"
libflate = "1.0.3"
serde = { version = "1.0.117", features = ["derive"], optional = true }
sha-1 = { version = "0.9.2", default-features = true }
